updated the javascript to show cupcakes on loading of form

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 <body class="p-3 mb-2 bg-secondary">
     <h1 class="display-2 text-center">Cupcakes</h1>
     <ul class="text-center" id="cupcakes-list"> 
-        {% for cupcake in cupcakes %}
+        <!-- {% for cupcake in cupcakes %}
         
         <div data-id="{{cupcake.id}}">
             <li>{{cupcake.flavor}}/{{cupcake.size}}/{{cupcake.rating}}
@@ -19,7 +19,7 @@
             </li>
             <img src="{{cupcake.image}}" class="border rounded border-dark border-3 mg-fluid Cupcake-img" alt="(no image provided)">
         </div>
-        {% endfor %}
+        {% endfor %} -->
     </ul>
     <div class="container">
         <h2 class="display-2 text-center">Add a Cupcake</h2>
